carpeta con proyectos con avances

--- a/reserva.tu.sala.project/app/src/main/AndroidManifest.xml
+++ b/reserva.tu.sala.project/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".CheckBoxActivity"></activity>
+        <activity android:name=".ReservarSalaActivity"></activity>
     </application>
 
 </manifest>
