--- a/ReservaTuSala - ANDROID/app/src/main/AndroidManifest.xml
+++ b/ReservaTuSala - ANDROID/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jjcouoh.reservatusala">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".MyappApplication"
         android:allowBackup="true"
@@ -9,6 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/AppThemeNoActionBar">
@@ -24,6 +27,14 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CheckBoxActivity"></activity>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
+        <provider
+            android:name="com.facebook.FacebookContentProvider"
+            android:authorities="@string/facebook_app_authorities"
+            android:exported="true" />
     </application>
 
 </manifest>
