--- a/reserva.tu.sala.project/app/src/main/AndroidManifest.xml
+++ b/reserva.tu.sala.project/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jjcouoh.reservatusala">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".MyappApplication"
         android:allowBackup="true"
@@ -26,7 +28,8 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ReservarSalaActivity"></activity>
+        <activity android:name=".ReservarSalaActivity" />
+        <activity android:name=".DetallesSalaActivity"></activity>
     </application>
 
 </manifest>
